kubernetes/traefik/templates/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metdata:
  name: tf-pungrumpy
  namespace: tf-pungrumpy
  annotations:
    # (Optional): Annotations for the Ingress Controller
    # -- ingress class is needed when traefik is not the default
    # kubernetes.io/ingress.class: traefik
    # ---
    # -- entrypoint and tls configurations
    # traefik.ingress.kubernetes.io/router.entrypoints: web, websecure
    # traefik.ingress.kubernetes.io/router.tls: "true"
    # ---
    # -- optional middlewares
    # traefik.ingress.kubernetes.io/router.middlewares:your-middleware@kubernetescrd
    # ---
spec:
  rules:
    - host: your-hostname
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: your-service-name
                port:
                  number: 80
      # (Optional): TLS configuration
      # tls:
      #   - hosts:
      #     - your-hostname
      #   secretName: your-tls-secret
